--- a/Week_3/Week_3_Opgave_2.18.2/Week_3_Opgave_2.18.2.vcxproj
+++ b/Week_3/Week_3_Opgave_2.18.2/Week_3_Opgave_2.18.2.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{48cf6778-2f85-481d-bbc0-3cb0d1c7781b}</ProjectGuid>
     <RootNamespace>Week3Opgave2182</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Week_3_Opgave_2.18.02</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
