--- a/Week_3/Week_3_Opgave_2.18.8/Week_3_Opgave_2.18.8.vcxproj
+++ b/Week_3/Week_3_Opgave_2.18.8/Week_3_Opgave_2.18.8.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{66a7e46b-2b34-481c-9208-560753f0aca9}</ProjectGuid>
     <RootNamespace>Week3Opgave2188</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Week_3_Opgave_2.18.08</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
